turtleart.lessons.turtleart.Main.HouseMany.scala.error
Source:3: error: not found: value x
val posInitX = setX(x:Double);
                    ^Source:4: error: not found: value y
val posInitY = setY(y:Double);
                    ^